{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 14,
  "lineage": "0fb03933-d86e-42cd-7413-e85ea10cc42e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04df1508c6be5879e",
            "arn": "arn:aws:ec2:eu-west-3:316581661642:instance/i-0e086bfc199f67e7b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e086bfc199f67e7b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "FullStackKeys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e30466d780af4da5"
              }
            ],
            "primary_network_interface_id": "eni-0e30466d780af4da5",
            "private_dns": "ip-172-31-6-110.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.110",
            "public_dns": "ec2-13-38-88-231.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.88.231",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d78da2e27840ba0c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "FullStackSG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e3f8a1308443349e",
            "tags": {
              "Name": "flask-app-server"
            },
            "tags_all": {
              "Name": "flask-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03e2e23fdca454776"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316581661642",
            "id": "i-0e086bfc199f67e7b",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.FullStackSG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "FullStackSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:316581661642:security-group/sg-03e2e23fdca454776",
            "description": "FULLSTACK PROJECT SECURITY GROUP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e2e23fdca454776",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "92.92.126.170/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "FullStackSG",
            "name_prefix": "",
            "owner_id": "316581661642",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "FullStackSG"
            },
            "tags_all": {
              "Name": "FullStackSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0424e912362ea7608"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316581661642",
            "id": "sg-03e2e23fdca454776",
            "region": "eu-west-3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:316581661642:security-group-rule/sgr-0fe890d079aea819b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0fe890d079aea819b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-03e2e23fdca454776",
            "security_group_rule_id": "sgr-0fe890d079aea819b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316581661642",
            "id": "sgr-0fe890d079aea819b",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.FullStackSG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:316581661642:security-group-rule/sgr-0270807cad3a687f4",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0270807cad3a687f4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-03e2e23fdca454776",
            "security_group_rule_id": "sgr-0270807cad3a687f4",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316581661642",
            "id": "sgr-0270807cad3a687f4",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.FullStackSG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "SshWithMyIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:316581661642:security-group-rule/sgr-088e819c16d6c3c4a",
            "cidr_ipv4": "92.92.126.170/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-088e819c16d6c3c4a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-03e2e23fdca454776",
            "security_group_rule_id": "sgr-088e819c16d6c3c4a",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316581661642",
            "id": "sgr-088e819c16d6c3c4a",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.FullStackSG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:316581661642:security-group-rule/sgr-00b4cee5a957f2814",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-00b4cee5a957f2814",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-03e2e23fdca454776",
            "security_group_rule_id": "sgr-00b4cee5a957f2814",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316581661642",
            "id": "sgr-00b4cee5a957f2814",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.FullStackSG"
          ]
        }
      ]
    }
  ]
}